fix(blackboard): 修复黑板锚点越界和变换逻辑问题
- 添加锚点越界检查和错误提示功能
- 修复黑板选择区域时的坐标变换逻辑
- 优化渲染时的光照处理和模型渲染流程
- 调整材质列表界面字体渲染避免自定义字体样式
- 更新模组版本号至0.2.7
- 重构坐标变换相关工具方法并增加物理空间判断
- 优化键位绑定状态更新机制